--- a/test.html
+++ b/test.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-    <script type="text/javascript"></script>
-    <script type="text/javascript"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.cdnjs.com/ajax/libs/raphael/1.5.2/raphael-min.js"></script>
+    <script type="text/javascript" src="javascripts/planetexpress.js"></script>
 </head>
 <body>
     <div id="planet_express"></div>
